src/test/deca/syntax/valid/SansObjet/Inst9-Return-Ident.deca
// Description:
//    Return identifier instruction.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        return x;
}
