src/test/deca/syntax/invalid/SansObjet/Inst9-Return.deca
// Description:
//    Return void instruction.
//
// Results:
//    11:14 mismatched input ';' expecting {FLOAT, INT, '(', '-', '!', 'false',
//    'null', 'readInt', 'readFloat', 'true', IDENT, STRING, NEW, THIS}
//
// Historique:
//    cree le 08/01/2022

{
        return;
}
